--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -6,7 +6,7 @@ samt det udleverede systems fysiske begrænsninger.
 Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt (D), forventet nedslagspunkt (G)
 og "target crossing point" (TCS).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
-Lerduens parabel findes ved interpolation af disse tre punkter. Det blev antaget at luftmodstanden var neglibar.
+Lerduens parabel findes ved interpolation af disse tre punkter. Det antages at luftmodstanden er neglibar.
 %Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
 %\begin{equation}
 %Pos\left( t \right) = 
@@ -22,7 +22,9 @@ Lerduens parabel findes ved interpolation af disse tre punkter. Det blev antaget
 %\end{equation}
 
 %Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
-Lerduens affyringshastighed og vinkel ift. xy planet kan lerduens flugt beregnes. 
+%Lerduens affyringshastighed og vinkel ift. xy planet kan lerduens flugt beregnes. 
+%
+Lerduens affyringshastighed og vinkel ift. xy planet blev beregnet vha. den fundne kasteparabel. 
 Lerduen affyres med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103 \degree\) 
 ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
 
@@ -65,7 +67,9 @@ Tilt-rammen kan bevæge sig frit,
 men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
 Haglene fra et 12 gauge haglgevær med Skeet Choke spredes så de dækker et område
-med en diameter på 1,32 [m] på en afstand til centrum af cirklen på 37 [m] \citep[Pattern and choke]{patternandchoke}.
+%med en diameter på 1,32 [m] på en afstand til centrum af cirklen på 37 [m] 
+med en diameter på 1,32 [m] på 37 meters afstand
+\citep[Pattern and choke]{patternandchoke}.
 Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
 \begin{split}
