forslag til projektoverblik

--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -22,9 +22,14 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
-De grønne kasser på figur \ref{fig:overview_openloop_PTS}
-repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
-FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. 
-FPGA'en og mikrocontrolleren kommunikerer sammen vha. SPI.
-FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for
-pan og H-broen og motor for tilt. DC-motorene sender deres encoder feedback til FPGA'en.
+
+\todo[inline, author=Michael]{Dette afsnit bør rykkes op på samme side som kravspecifikation, men det kunne jeg ikke finde ud af.. :(}
+
+% Følgende er blot gentagelser. 
+
+%De grønne kasser på figur \ref{fig:overview_openloop_PTS}
+%repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
+%FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. 
+%FPGA'en og mikrocontrolleren kommunikerer sammen vha. SPI.
+%FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for
+%pan og H-broen og motor for tilt. DC-motorene sender deres encoder feedback til FPGA'en.
