--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -304,12 +304,12 @@ hvilket i værste tilfælde vil sætte integratorleddet ud af funktion.
 Et for højt valg vil føre til at tilføjelse af integratormætningen ikke vil ændre 
 performance, som ønsket.
 
-Et passende valg af integratormætning vurderes til at være når ligning \ref{eq:integratorsaturation} 
-overholdes.
+%Et passende valg af integratormætning vurderes til at være når ligning \ref{eq:integratorsaturation} 
+%overholdes.
 
-\begin{equation}
-	K_I \cdot Integrator_{Max} \approx PWM_{Max}
-\label{eq:integratorsaturation}
-\end{equation}
-\todo[inline,author=Mikkel,color=Pink]{Jeg mangler kilde for ovenstående, men kan ikke finde noget. Det er bare mit bedste bud.}
+%\begin{equation}
+%	K_I \cdot Integrator_{Max} \approx PWM_{Max}
+%\label{eq:integratorsaturation}
+%\end{equation}
+%\todo[inline,author=Mikkel,color=Pink]{Jeg mangler kilde for ovenstående, men kan ikke finde noget. Det er bare mit bedste bud.}
 
