--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -375,7 +375,7 @@ Måleusikkerheden er $\pm$ 4 [\micro s].}
 \label{tb:ctrl task runtime test}
 \end{table}
 
-På trods af at afviklingstiden varierer, afvikles tasken før sin deadline - med en margin på min. 1,294 [ms] til næste task. 
+Dataene viser at \textit{Control} tasken blev afviklet før sin deadline - med en margin på min. 1,294 [ms].
 %\todo[inline,author=Nikolaj, color=green]{Skal man ikke tænke mindste målte interval - måleusikkerheden - længste afviklingstid? - Indregn worst case}
 Variationen i afviklingstiden skyldes koordinattransformationen og PID-regulatoren. Den maksimale variation af afviklingstiden udgør $ \frac{360 - 326}{1667} = 2,04\% $ af periodetiden, hvilket kan toleres. 
 \todo[inline, author=Michael]{GRRR, kan ikke få ovenstående afsnit til at give mening..}
