--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,6 +1,6 @@
 %\part{Regulator justering og PTS verifikation}
 \part{Regulator justering}
-I denne del optimeres performance ved at ændre på regulatorene for pan og tilt. 
+I denne del optimeres systemets performance ved at ændre på regulatorene for pan og tilt. 
 Det vurderes om det er nødvendigt med yderligere tilføjelser til regulatorerne 
 for at opnå den ønskede performance.
 Herefter vurderes PTS's performance i forhold til kravspecifikationen.
