--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -32,7 +32,7 @@ Det ses tydeligt, at den samlede trackingfejl er langt større end kravet om en
 maksimal trackingfejl på 1.02 \degree.
 Det vurderes derfor, at yderligere manuel justering af regulatoren er nødvendig.
 
-\subsection{Manuel justering ift. fysisk PTS}
+\section{Manuel justering ift. fysisk PTS}
 
 Ved at ændre på koefficienterne og analysere fejlgraferne justeres performance 
 hen mod det ønskede.
@@ -44,7 +44,7 @@ regulator.
 
 \todo[inline,color=Pink,author=Mikkel]{Ovenstående er meget kvalitativt -  men alternativet er at vi skal have en del grafer, som let kommer til at fylde mange sider.}
 
-\subsubsection{Valg af integratormætning}
+\subsection{Valg af integratormætning}
 Det vælges at sætte integratormætningen til 100 for begge regulatorer betyder, da det vurderes, at der drages
 fuld nytte af integratorleddet, da ligning \ref{eq:integratorsaturation} 
 overholdes.
@@ -56,7 +56,7 @@ overholdes.
 
 \todo[inline,color=Pink,author=Mikkel]{Måske for kvalitativt. Måske må man ikke bare lave sin egen ligning, men jeg har ikke nogne kilde.}
 
-\subsubsection{Tilføjelse af et D-filter}
+\subsection{Tilføjelse af et D-filter}
 \todo[inline,color=Pink,author=Mikkel]{Michael skriver her ;)}
 
 
@@ -73,7 +73,7 @@ overholdes.
 
 
 
-\subsubsection{Endelig performance}
+\section{Endelig performance}
 %For ilteration XXXXXXXXX med controller koefficienterne angivet i tabel \ref{tb:PID_final}, er det 
 %lykkedes at opfylde kravet om den samlede tracking fejl som stilles for PTS. 
 %Figur \ref{fig:PID_final} viser tracking fejlen for hhv. pan og tilt samt den samlede tracking fejl. 
@@ -104,7 +104,7 @@ Pan   & 80 & 160 & 3.55
 
 \todo[inline,color=Pink,author=Mikkel]{På begge fejlgrafen bør der stå trackingfejl i stedet for samlet fejl.}
 
-\subsection{Delkonlusion}
+\section{Delkonlusion}
 Ved trial \& error blev regulatorkoefficienterne justeret til at give den ønskede 
 steprespons. Disse koefficienter giver dårlige performance ved PTS. 
 Efter yderligere manuel justering med PI regulator og integratormætning på pan og tilt lykkedes 
