tilføjet label til upsampling

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -255,6 +255,7 @@ Fejlen på størrelsen på responsen er meget lille i hele spektret,
 mens fejlen på fasen er lille ved lave frekvenser og stiger ved høje frekvenser.
 
 \subsection{Upsampling}
+\label{subsec:upsampling}
 Da reguleringssløjfen, som beskrevet i afsnit \ref{subsec:choosefs}, køres med en frekvens på 600 [Hz],
 som er 5 gange højere end input-samplingfrekvensen, skal der altså foretages en upsampling.
 %Upsamplingen foretages med Zero Order Hold, hvorved ét sample ved 120 Hz indsættes 
