--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -67,14 +67,14 @@ Der implementeres et 4. ordens FIR filter. Filtret er designet i fdatool med bru
 
 \begin{figure}[h!]
 \centering
-\subfloat[Steprespins for det implementerede filter.\label{fig:d_filter_step}]{%
+\subfloat[Steprespons for det implementerede filter.\label{fig:d_filter_step}]{%
 	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-step}
 }
 \subfloat[Frekvensrespons for det implementerede filter.\label{fig:d_filter_bode}]{%
 	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-bode}
 	
 }
-%\caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
+\caption[D-filterets respons]{Dette er ikke en figur tekst. }
 \label{fig:d_filter}
 \end{figure}
 
