nye versioner af figurer til anders

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -68,10 +68,10 @@ Der implementeres et 4. ordens FIR filter. Filtret er designet i fdatool med bru
 \begin{figure}[h!]
 \centering
 \subfloat[Steprespons for det implementerede filter.\label{fig:d_filter_step}]{%
-	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-step}
+	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-step-small}
 }
 \subfloat[Frekvensrespons for det implementerede filter.\label{fig:d_filter_bode}]{%
-	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-bode}
+	\includegraphics[width=0.7\textwidth]{./graphics/d-filter-bode-small}
 	
 }
 \caption[D-filterets respons]{Dette er ikke en figur tekst. }
