--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -8,5 +8,6 @@ Applikationen analyseres og kravene til systemet fastlægges.
 Sidst gives et overblik over blokopdelingen af det samlede system. 
 
 \input{./content/problemformulering}
-\include{./content/kravspecifikation}
-\include{./content/projekt_overblik}
+\newpage
+\input{./content/kravspecifikation}
+\input{./content/projekt_overblik}
