Løst todo og tilføjet kommentar.

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -7,6 +7,7 @@ I praksis udføres det ved brug af Matlabs grafiske "trial \& error" redskab \em
 på en 1-radian steprespons. 
 De bedste koefficienterne findes i første omgang til at være som i tabel \ref{tb:PID_test14}. 
 \todo[inline, author=Michael]{Hvad får vi ud af at kigge på 1 radian step? Det fremgår ikke særlig klart. Måske kunne vi starte med Ziegler Nicholls istedet.}
+\todo[color=yellow,author=Anders]{Det er blot en reference, Michael. Vi snakkede som Zigler-Nichlos - tallene var helt hen i vejret.}
 \begin{figure}[h!]
 \centering
 \begin{tabu}{l|[1.25pt]c|c|c}
