--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -6,8 +6,8 @@ Justeringen af PI-koefficienterne ift. den matematiske model sker ved "trial \& 
 I praksis udføres det ved brug af Matlabs grafiske "trial \& error" redskab \emph{pidtool()} og ved at kigge 
 på en 1-radian steprespons. 
 De bedste koefficienterne findes i første omgang til at være som i tabel \ref{tb:PID_test14}. 
-\todo[inline, author=Michael]{Hvad får vi ud af at kigge på 1 radian step? Det fremgår ikke særlig klart. Måske kunne vi starte med Ziegler Nicholls istedet.}
-\todo[color=yellow,author=Anders]{Det er blot en reference, Michael. Vi snakkede som Zigler-Nichlos - tallene var helt hen i vejret.}
+\todo[inline,color=Pink,author=Mikkel]{Grafen bør stoppe ved SB og mangler ø.}
+
 \begin{figure}[h!]
 \centering
 \begin{tabu}{l|[1.25pt]c|c|c}
