Tilføjelse af en label!

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -271,6 +271,7 @@ med en værdi forskellig fra 0. Dette fjerner ikke de førnævnte spejlbilleder,
 til gengæld heller ikke forsinkelsen af input-signalet.
 
 \subsection{Valg af regulatortype}
+\label{ss:ValgReg}
 Pga. de simplificerende antagler som er indeholdt i den matematiske model for systemet,
 vil en åbensløjferegulering være et dårligt valg: den vil være følsom overfor afvigelser fra den
 matematiske model. Desuden er der fra projektoplægget krav om en lukketsløjferegulering.
