--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -43,8 +43,8 @@ i forhold til den kontinuerte lerdueparabel fra applikationen.
 \begin{figure}[h!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/pidPhys1.eps}
-\caption[Fejlsignaler m. startkoefficienter]{Fejlsignaler m. startkoefficienterne fra tabel \ref{tb:pidSimulink}.\\
-	De sorte lodrette streger angiver \(t_s=0,557 \text{ [s]}\).
+\caption[Fejlsignaler m. startkoefficienter]{Fejlsignaler m. startkoefficienterne fra tabel \ref{tb:pidSimulink}.
+	De sorte lodrette streger angiver \(t_s=0,557 \text{ [s]}\).\\
 	De røde målepunkter er for Pan, og de blå målepunkter er for Tilt.} 
 \label{fig:pidPhys1}
 \end{figure}
