Opdatering af grafik.

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -45,7 +45,7 @@ i forhold til den kontinuerte lerdueparabel fra applikationen.
 \includegraphics[width=1\textwidth]{./graphics/pidPhys1.eps}
 \caption[Fejlsignaler m. startkoefficienter]{Fejlsignaler m. startkoefficienterne fra tabel \ref{tb:pidSimulink}.
 	De sorte lodrette streger angiver \(t_s=0,557 \text{ [s]}\).\\
-	De røde målepunkter er for Pan, og de blå målepunkter er for Tilt.} 
+	Pan-fejlsignalet er markeret med prikker, og Tilt-fejlsignalet er markeret med krydser.} 
 \label{fig:pidPhys1}
 \end{figure}
 
