--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -66,7 +66,7 @@ i forhold til den kontinuerte lerdueparabel fra applikationen.
 
 Som det ses på figur \ref{fig:pidPhys1} giver regulatoren til Tilt et fejlsignal,
 der maks. afviger 0,9 \degree{} fra 0.
-Pan-fejlen afviger derimod op til 1,8 \degree{} pga. et for højt overshoot.
+Pan-fejlen afviger derimod op til 1,8 \degree{}.
 Tracking fejlen er altså langt større end kravet på maksimalt 1,02 \degree.
 En manuel justering af koefficienterne på især Pan-regulatoren er derfor nødvendig.
 
