--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -1,4 +1,5 @@
 \section{Justering ift. matematisk model af PTS}
+\label{ss:regulatorMat}
 Som beskrevet i afsnit \ref{ss:ValgReg} er det valgt at implementere to PI-regulatorer.
 Der tages udgangspunkt i den matematiske model af systemet, bestående af overføringsfunktionerne
 \(G_{tilt,zoh}\) og \(G_{pan,zoh}\), som er diskretiseringer af de kontinuerte overføringsfunktioner.
@@ -71,20 +72,18 @@ Tracking fejlen er altså langt større end kravet på maksimalt 1,02 \degree.
 En manuel justering af koefficienterne på især Pan-regulatoren er derfor nødvendig.
 
 \section{Manuel justering ift. fysisk PTS}
-
 Ved at ændre på koefficienterne og analysere fejlgraferne justeres performance 
 hen mod det ønskede.
 
-Det ses at trackingfejlkravet kan opfyldes med en PI regulator på tilt.
-På pan er der behov for en hurtigere reaktion, hvilket medfører et større overshoot. 
-For at mindske overshootet vurderes det, at der på pan er behov for en PID 
-regulator.
+Det vurderes på baggrund af det lave fejlsignal ved Tilt at den i afsnit \ref{ss:regulatorMat} fundne
+PI-regulator for Tilt er anvendelig i praksis.
 
-\todo[inline,color=Pink,author=Mikkel]{Ovenstående er meget kvalitativt -  men alternativet er at vi skal have en del grafer, som let kommer til at fylde mange sider.}
+På Pan er der behov for en hurtigere og mere dæmpet reaktion,
+og det vurderes derfor, at der på Pan er brug for en PID-regulator.
 
 \subsection{Valg af integratormætning}
-Det vælges at sætte integratormætningen til 100 for begge regulatorer betyder, da det vurderes, at der drages
-fuld nytte af integratorleddet, da ligning \ref{eq:integratorsaturation} 
+Det vælges at sætte integratormætningen til 100 for begge regulatorer, da det vurderes, at der drages
+fuld nytte af integratorleddet når ligning \ref{eq:integratorsaturation} 
 overholdes.
 
 \begin{equation}
@@ -94,14 +93,15 @@ overholdes.
 
 \todo[inline,color=Pink,author=Mikkel]{Måske for kvalitativt. Måske må man ikke bare lave sin egen ligning, men jeg har ikke nogne kilde.}
 
-
 \subsection{Tilføjelse af et D-filter}
-Det vurderes at kravene for Pan rammen ikke kunne opnåes vha. en standard PID regulator. 
-Det vælges derfor at tilføje et filter til D-leddet. 
-Det betyder at D-leddet nu vægter tidligere ændringer i error signalet. 
-Filtret reducerer peaks i det differrencierede errorsignal, der skyldes ZoH i upsamplingen (se afsnit \ref{subsec:upsampling}).
+Undervejs i den manuelle justering af PID-regulatoren til Pan blev det fundet, at D-leddet ikke udnyttedes til fulde,
+og at kravene ikke kunne overholdes med PID-regulatoren som den var.
+Det valgtes derfor at tilføje et filter til D-leddet. 
+Det betyder at D-leddet nu vægter tidligere ændringer i fejlsignalet. 
+Filtret reducerer peaks i det differrentierede fejlsignal, der skyldes Zero Order Hold i upsamplingen (se afsnit \ref{subsec:upsampling}).
 
-Der implementeres et 4. ordens FIR filter. Filtret er designet i fdatool med brug af at Kaiser vindue. Filtrets step og frekvensrespons kan ses på figur \ref{fig:d_filter_step} hhv. \ref{fig:d_filter_bode}. 
+Der implementeres et 4. ordens FIR filter. Filtret er designet i MATLAB's grafiske fdatool og gør brug af at Kaiser vindue.
+Filtrets step- og frekvensrespons kan ses på figur \ref{fig:d_filter_step} hhv. \ref{fig:d_filter_bode}. 
 
 \begin{figure}[h!]
 \centering
@@ -116,27 +116,7 @@ Der implementeres et 4. ordens FIR filter. Filtret er designet i fdatool med bru
 \label{fig:d_filter}
 \end{figure}
 
-
-%[.5\linewidth]{\includegraphics{{./graphics/d-filter-bode-small}}}
-
-
-%Som det fremgår af figur \ref{fig:PID_test14_plot}, er den samlet tracking fejl XXXXXXXXXXXXXX i 
-%forhold til kravene for PTS. Grundet tracking fejlen skal optimeringen af controller koefficienterne
- %foretages manuelt.
-%Finjusteringen af controller koefficienterne udføres som en iterativ proces. Optimeringsprocessen 
-%er opdelt i to, således der kun foretages ændringer for enten pan eller tilt. 
-%Optimerings iterationerne tager udgangspunkt i en grafisk afbildning af tracking fejlen, 
-%hvor efter det vurderes hvorledes hver controller koefficient skal øges eller mindskes for at få det ønsket resultat. 
-%Der blev foretaget XXXXXXXXXX ilterationer og det lykkes at få en samlet tracking fejl 
-%som opfylder kravet, angivet i ligning \ref{eq:ks:trackingerror}.
-
-
-
 \section{Endelig performance}
-%For ilteration XXXXXXXXX med controller koefficienterne angivet i tabel \ref{tb:PID_final}, er det 
-%lykkedes at opfylde kravet om den samlede tracking fejl som stilles for PTS. 
-%Figur \ref{fig:PID_final} viser tracking fejlen for hhv. pan og tilt samt den samlede tracking fejl. 
-
 Efter adskillige test og finjustering af regulatoren, vurderes det at 
 koefficienterne i tabel \ref{tb:PID_final} giver den bedst mulige performance 
 for PTS. Denne performance ses i \ref{fig:PID_final}. Det ses at trackingfejlen 
@@ -161,12 +141,15 @@ Pan   & 80 & 160 & 3,55
 \label{fig:PID_final}
 \end{figure}
 
+Det viste sig under justeringen at systemet er meget følsomt overfor slid i drivremmene mellem motorerne og Pan- og Tilt-rammerne.
+Systemet kræver derfor kalibrering for at kunne fungere i praksis.
+
 \section{Delkonlusion}
-Ved trial \& error blev regulatorkoefficienterne justeret til at give den ønskede 
-steprespons. Disse koefficienter giver dårlige performance ved PTS. 
-Efter yderligere manuel justering med PI regulator og integratormætning på pan og tilt lykkedes 
-det ikke at få den ønskede performance på pan. 
-Derfor laves en PID regulator med D-filter til pan. Med denne PID regulator til pan og 
-PI regulatoren til tilt opnås den ønskede performance. 
-Trackingfejlen holdes under kravet på 1.02 \degree{} pånær ved et par enkelte 
-samples.
+Ved Trial-\&-Error-metoden blev regulatorkoefficienterne i Simulink justeret til at give den ønskede 
+tracking performance ift. et parabelinput. Pan-koefficienterne giver dårlig performance i praksis.
+Ved manuel justering blev et sæt PID-regulatorkoefficienter fundet til Pan, som gav bedre performance.
+Det vurderedes nødvendigt at implementere et lavpasfilter til D-leddet.
+Med det implementerede filter gav de justerede regulatorkoefficienter en performance,
+der ikke ved alle forsøg levede op til kravspecifikationen. Ved nogle af forsøgene viste
+systemet sig at leve op til kravene om en Tracking fejl på under 1,02 \degree{} efter 0,557 [s].
+Systemet er følsomt overfor slid i drivremmene.
