--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,8 +1,10 @@
 %\part{Regulator justering og PTS verifikation}
 \part{Regulatorjustering}
 I denne del optimeres systemets performance ved at ændre på regulatorene for pan og tilt. 
+På mikrocontrolleren er regulatorerne implemeteret som diskrete PID-algoritmer,
+hvor D-leddet betragter forrige fejlsignal.
 Det vurderes om det er nødvendigt med yderligere tilføjelser til regulatorerne 
-for at opnå den ønskede performance.
+for at opnå den ønskede performance, og det vælges at udvide PID-algoritmerne med et lavpasfilter til D-leddet.
 Herefter vurderes PTS's performance i forhold til kravspecifikationen.
 \input{./content/PID_optimering}
 %\include{./content/PTS_verifikation}
