--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -112,7 +112,7 @@ Filtrets step- og frekvensrespons kan ses på figur \ref{fig:d_filter_step} hhv.
 	\hspace*{-1.15cm}\includegraphics[width=0.57\textwidth]{./graphics/d-filter-bode-small}
 	
 }
-\caption[D-filterets respons]{Dette er ikke en figur tekst. }
+\caption[D-filterets respons]{D-filterets step- og frekvensrepons.}
 \label{fig:d_filter}
 \end{figure}
 
@@ -138,7 +138,8 @@ Pan   & 100 & 110 & 3,8
 \centering
 \includegraphics[width=1\textwidth]{./graphics/pidPhys2.eps}
 \caption[Endelig performance]{Endelig performance. Fejlsignaler for Pan (krydser) og Tilt (prikker) øverst, Tracking fejl nederst.
-Testen er foretaget med koefficienterne fra tabel \ref{tb:PID_final}.} 
+Testen er foretaget med koefficienterne fra tabel \ref{tb:PID_final}.\\
+De sorte streger angiver kravene om Settling Time på under 0,557 [s] og Tracking fejl på under 1,02 \degree{}.} 
 \label{fig:PID_final}
 \end{figure}
 %
